--- a/About.html
+++ b/About.html
@@ -1,148 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About</title>
 
-    <link href="styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html"
-              >Home <span class="sr-only"></span
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <header>
-      <h1 class="text-center pt-4">About Automoblox</h1>
-    </header>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-    <section class="container">
-      <article>
-        <h2>Our Story</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-          dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-          rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-          commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-          error, numquam autem in veniam perferendis eos nemo similique hic
-          voluptates reiciendis. Qui.
-        </p>
-      </article>
-      <article>
-        <h2>Innovation in Design</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-          dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-          rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-          commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-          error, numquam autem in veniam perferendis eos nemo similique hic
-          voluptates reiciendis. Qui.
-        </p>
-      </article>
-      <article>
-        <h2>Quality Craftsmanship</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Reprehenderit a voluptate odio ipsum quibusdam ipsam aperiam quos
-          temporibus totam praesentium? Porro aspernatur maxime beatae quas
-          facilis obcaecati, perferendis sint enim cum quidem, nesciunt
-          perspiciatis corporis?
-        </p>
-      </article>
-    </section>
+  <link href="styles.css" rel="stylesheet" />
 
-    <footer class="fixed-bottom">
-      <div class="container">
-        <section class="row">
-          <div class="col-sm-6">
-            <h4>Contact Us</h4>
-            <ul>
-              <li>
-                <p>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                      d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-                  </svg>
-                  555-555-5555
-                </p>
-              </li>
-              <li>
-                <p>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
-                    <path
-                      d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z" />
-                    <path
-                      d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z" />
-                  </svg>
-                  someEmail@gmail.com
-                </p>
-              </li>
-              <li>
-                <p>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-building-fill" viewBox="0 0 16 16">
-                    <path
-                      d="M3 0a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h3v-3.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V16h3a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1H3Zm1 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3.5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5ZM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1ZM7.5 5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5Zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1ZM4.5 8h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5Zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3.5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5Z" />
-                  </svg>
-                  4692 Fairfax Drive
-                </p>
-              </li>
-            </ul>
-          </div>
-          <div class="col-sm-6">
-            <h4>Copyright</h4>
-            <ul>
-              <li>
-                Icons From:
-                <a href="https://icons.getbootstrap.com/">BootStrap Icons</a>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section class="row">
-          <div class="col-md-12">
-            <p class="text-center">© 2023 Copyright | Automoblox</p>
-          </div>
-        </section>
-      </div>
-      <!--Container-->
-    </footer>
-  </body>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/index.html">
+      <img src="./images/project-1-assets/automoblox_logo.jpg" width="100" height="50" alt="Automoblox">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="./About.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./Products.html">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./Contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <header>
+    <h1 class="text-center pt-4">About Automoblox</h1>
+  </header>
+
+  <section class="container">
+    <article>
+      <h2>Our Story</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+        dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+        rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
+        commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
+        error, numquam autem in veniam perferendis eos nemo similique hic
+        voluptates reiciendis. Qui.
+      </p>
+    </article>
+    <article>
+      <h2>Innovation in Design</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+        dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+        rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
+        commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
+        error, numquam autem in veniam perferendis eos nemo similique hic
+        voluptates reiciendis. Qui.
+      </p>
+    </article>
+    <article>
+      <h2>Quality Craftsmanship</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Reprehenderit a voluptate odio ipsum quibusdam ipsam aperiam quos
+        temporibus totam praesentium? Porro aspernatur maxime beatae quas
+        facilis obcaecati, perferendis sint enim cum quidem, nesciunt
+        perspiciatis corporis?
+      </p>
+    </article>
+  </section>
+  <footer>
+    <div class="container">
+      <section class="row">
+        <div class="col-sm-6">
+          <h4>Contact Us</h4>
+          <ul>
+            <li>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                </svg>
+                555-555-5555
+              </p>
+            </li>
+            <li>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
+                  <path
+                    d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z" />
+                  <path
+                    d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z" />
+                </svg>
+                someEmail@gmail.com
+              </p>
+            </li>
+            <li>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-building-fill" viewBox="0 0 16 16">
+                  <path
+                    d="M3 0a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h3v-3.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V16h3a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1H3Zm1 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3.5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5ZM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1ZM7.5 5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5Zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1ZM4.5 8h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5Zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3.5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5Z" />
+                </svg>
+                4692 Fairfax Drive
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h4>Copyright</h4>
+          <ul>
+            <li>
+              Icons From:
+              <a href="https://icons.getbootstrap.com/">BootStrap Icons</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="row">
+        <div class="col-md-12">
+          <p class="text-center">© 2023 Copyright | Automoblox</p>
+        </div>
+      </section>
+    </div>
+    <!--Container-->
+  </footer>
+
+</body>
+
 </html>
