--- a/Products.html
+++ b/Products.html
@@ -15,16 +15,15 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/index.html">
+      <img src="./images/project-1-assets/automoblox_logo.jpg" width="100" height="50" alt="Automoblox">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only"></span></a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="./About.html">About</a>
         </li>
@@ -37,66 +36,13 @@
       </ul>
     </div>
   </nav>
-  </nav>
   <header>
-    <h1 class="text-center">Our Products</h1>
+    <h1 class="text-center pt-4 pb-4">Our Products</h 1>
   </header>
-  <div class="container">
-    <section class="row">
-      <article class="col-md-3">
-        <h3>Product</h3>
-        <figure>
-          <img src="./images/project-1-assets/a9s_small.jpg" />
-          <p>$0.00</p>
-          <button class="btn btn-info">View Details</button> <button class="btn btn-info">Add to Cart</button>
-        </figure>
-      </article>
-      <article class="col-md-3">
-        <h3>Product</h3>
-        <figure>
-          <img src="./images/project-1-assets/a9s_small.jpg" />
-          <p>$0.00</p>
-          <button class="btn btn-info">View Details</button> <button class="btn btn-info">Add to Cart</button>
-        </figure>
-      </article>
-      <article class="col-md-3">
-        <h3>Product</h3>
-        <figure>
-          <img src="./images/project-1-assets/a9s_small.jpg" />
-          <p>$0.00</p>
-          <button class="btn btn-info">View Details</button> <button class="btn btn-info">Add to Cart</button>
-        </figure>
-      </article>
-    </section>
-    <section class="row">
-      <article class="col-md-3">
-        <h3>Product</h3>
-        <figure>
-          <img src="./images/project-1-assets/a9s_small.jpg" />
-          <p>$0.00</p>
-          <button class="btn btn-info">View Details</button> <button class="btn btn-info">Add to Cart</button>
-        </figure>
-      </article>
-      <article class="col-md-3">
-        <h3>Product</h3>
-        <figure>
-          <img src="./images/project-1-assets/a9s_small.jpg" />
-          <p>$0.00</p>
-          <button class="btn btn-info">View Details</button> <button class="btn btn-info">Add to Cart</button>
-        </figure>
-      </article>
-      <article class="col-md-3">
-        <h3>Product</h3>
-        <figure>
-          <img src="./images/project-1-assets/a9s_small.jpg" />
-          <p>$0.00</p>
-          <button class="btn btn-info">View Details</button> <button class="btn btn-info">Add to Cart</button>
-        </figure>
-      </article>
-    </section>
-  </div> <!-- container -->
+  <div class="container productCardsContainer">
 
-  <footer class="fixed-bottom">
+  </div> <!-- container -->
+  <footer>
     <div class="container">
       <section class="row">
         <div class="col-sm-6">
@@ -154,6 +100,8 @@
     </div>
     <!--Container-->
   </footer>
+  <script src="main.js"></script>
+
 </body>
 
 </html>
