--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <link href="styles.css" rel="stylesheet" />
   </head>
@@ -50,7 +52,7 @@
         </ul>
       </div>
     </nav>
-
+  
     <header class="text-center pt-4">
       <h1>Welcome Automoblox</h1>
       <h2>Where Creativity Drives Innovation</h2>
@@ -220,3 +222,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
