--- a/About.html
+++ b/About.html
@@ -16,10 +16,22 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/index.html">
-      <img src="./images/project-1-assets/automoblox_logo.jpg" width="100" height="50" alt="Automoblox">
+      <img
+        src="./images/automoblox_logo.jpg"
+        width="100"
+        height="50"
+        alt="Automoblox"
+      />
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -28,7 +40,7 @@
           <a class="nav-link" href="./About.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./Products.html">Products</a>
+          <a class="nav-link" href="./cart.html">Your Cart</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./Contact.html">Contact</a>
@@ -39,7 +51,7 @@
   <header>
     <h1 class="text-center pt-4">About Automoblox</h1>
   </header>
-
+<main>
   <section class="container">
     <article>
       <h2>Our Story</h2>
@@ -74,6 +86,7 @@
       </p>
     </article>
   </section>
+</main>
   <footer>
     <div class="container">
       <section class="row">
