colours & fonts added

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="/index.html">
       <img
         src="./images/automoblox_logo.jpg"
@@ -26,8 +26,8 @@
     <button
       class="navbar-toggler"
       type="button"
-      data-toggle="collapse"
-      data-target="#navbarNav"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
       aria-controls="navbarNav"
       aria-expanded="false"
       aria-label="Toggle navigation"
@@ -48,6 +48,7 @@
       </ul>
     </div>
   </nav>
+  
   <header>
     <h1 class="text-center pt-4">About Automoblox</h1>
   </header>
