--- a/cart.html
+++ b/cart.html
@@ -16,29 +16,40 @@
   </head>
 
   <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="/index.html">
-            <img src="./images/automoblox_logo.jpg" width="100" height="50" alt="Automoblox">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="./About.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./cart.html">Your Cart</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./Contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="/index.html">
+        <img
+          src="./images/automoblox_logo.jpg"
+          width="100"
+          height="50"
+          alt="Automoblox"
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./About.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./cart.html">Your Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <header class="text-center pt-4">
       <h1>Your Cart</h1>
     </header>
