--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet" />
 
 </head>
@@ -37,13 +37,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./About.html">About</a>
+          <a class="nav-link" href="./About.html"><i class="bi bi-file-text-fill"></i> About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./cart.html">Your Cart</a>
+          <a class="nav-link" href="./cart.html"><i class="bi bi-cart-fill"></i> Your Cart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./Contact.html">Contact</a>
+          <a class="nav-link" href="./Contact.html"><i class="bi bi-envelope-at-fill"></i> Contact</a>
         </li>
       </ul>
     </div>
