--- a/Contact.html
+++ b/Contact.html
@@ -8,12 +8,12 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="/index.html">
       <img
         src="./images/automoblox_logo.jpg"
@@ -25,8 +25,8 @@
     <button
       class="navbar-toggler"
       type="button"
-      data-toggle="collapse"
-      data-target="#navbarNav"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
       aria-controls="navbarNav"
       aria-expanded="false"
       aria-label="Toggle navigation"
@@ -36,13 +36,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./About.html">About</a>
+          <a class="nav-link" href="./About.html"><i class="bi bi-file-text-fill"></i> About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./cart.html">Your Cart</a>
+          <a class="nav-link" href="./cart.html"><i class="bi bi-cart-fill"></i> Your Cart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./Contact.html">Contact</a>
+          <a class="nav-link" href="./Contact.html"><i class="bi bi-envelope-at-fill"></i> Contact</a>
         </li>
       </ul>
     </div>
