--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./About.html">About</a>
+            <a class="nav-link" href="./About.html"><i class="bi bi-file-text-fill"></i> About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cart.html">Your Cart</a>
+            <a class="nav-link" href="./cart.html"><i class="bi bi-cart-fill"></i> Your Cart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Contact.html">Contact</a>
+            <a class="nav-link" href="./Contact.html"><i class="bi bi-envelope-at-fill"></i> Contact</a>
           </li>
         </ul>
       </div>
     </nav>
-    
-    <header class="text-center pt-4">
+
+    <header class="text-center pt-4 pb-4">
       <h1>Welcome Automoblox</h1>
       <h2>Where Creativity Drives Innovation</h2>
     </header>
