--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="/index.html">
       <img
-        src="./images/automoblox_logo.jpg"
+        src="./images/automoblox_logo.png"
         width="100"
         height="50"
         alt="Automoblox"
