--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="/index.html">
         <img
-          src="./images/automoblox_logo.jpg"
+          src="./images/automoblox_logo.png"
           width="100"
           height="50"
           alt="Automoblox"
@@ -105,6 +105,7 @@
           <article id="cartContainer">
             <!--CartItems populated by JS from cartList[]-->
           </article>
+          <p><span id="cartSum"> </span></p>
         </div>
       </section>
     </main>
@@ -194,6 +195,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="main.js"></script> -->
+    <script src="cart.js"></script>
   </body>
 </html>
