--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="/index.html">
         <img
-          src="./images/automoblox_logo.jpg"
+          src="./images/automoblox_logo.png"
           width="100"
           height="50"
           alt="Automoblox"
@@ -54,7 +54,7 @@
     </nav>
 
     <header class="text-center pt-4 pb-4">
-      <h1>Welcome Automoblox</h1>
+      <h1>Welcome To Automoblox</h1>
       <h2>Where Creativity Drives Innovation</h2>
     </header>
     <main class="container">
