border colour matches car color on details page

--- a/About.html
+++ b/About.html
@@ -50,42 +50,57 @@
   </nav>
   
   <header>
-    <h1 class="text-center pt-4">About Automoblox</h1>
+    <h1 class="text-center pt-4 pb-4">About Automoblox</h1>
   </header>
-<main>
-  <section class="container">
-    <article>
+<main class="container">
+  <section class="row">
+    <article class="col-md-6">
       <h2>Our Story</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
         dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
         rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
         commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-        error, numquam autem in veniam perferendis eos nemo similique hic
-        voluptates reiciendis. Qui.
-      </p>
+        error, numquam autem in veniam perferendis eos nemo similique hic </p>  
+    
     </article>
-    <article>
-      <h2>Innovation in Design</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-        dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-        rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-        commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-        error, numquam autem in veniam perferendis eos nemo similique hic
-        voluptates reiciendis. Qui.
-      </p>
-    </article>
-    <article>
-      <h2>Quality Craftsmanship</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Reprehenderit a voluptate odio ipsum quibusdam ipsam aperiam quos
-        temporibus totam praesentium? Porro aspernatur maxime beatae quas
-        facilis obcaecati, perferendis sint enim cum quidem, nesciunt
-        perspiciatis corporis?
-      </p>
-    </article>
+<article class="col-md-6">
+  <h2>Our Mission</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+    rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
+    commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
+    error, numquam autem in veniam perferendis eos nemo similique hic </p>  
+
+</article>
+<article class="col-md-6">
+  <h2>Our Story</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+    rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
+    commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
+    error, numquam autem in veniam perferendis eos nemo similique hic 
+    ed facilis, ad fugit corrupti ed facilis, ad fugit corrupti</p>  
+
+</article>
+</article>
+<article class="col-md-6">
+  <h2>Our Values</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+    rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
+    commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
+    error, numquam autem in veniam perferendis eos nemo similique hic </p>  
+
+</article>
+<article class="col-md-12">
+  <h2 class="text-center">Our Commitment</h2>
+  <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+    rem dolor ex natus dolorum beatae nulla.orem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
+    rem dolor ex natus dolorum beatae nulla.</p>  
+</article>
+
   </section>
 </main>
   <footer>
@@ -146,7 +161,12 @@
     </div>
     <!--Container-->
   </footer>
-
+  <script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous"
+></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
