--- a/cart.html
+++ b/cart.html
@@ -104,6 +104,7 @@
                   class="form-control"
                   id="cardNum"
                   placeholder="1111-2222-3333-4444"
+                  pattern="\d{4}-\d{4}-\d{4}-\d{4}"
                 />
               </div>
               <div class="col-md-6">
