form valadation, Animation fixes, Header mobile freindly

--- a/About.html
+++ b/About.html
@@ -42,9 +42,6 @@
         <li class="nav-item">
           <a class="nav-link" href="./cart.html"><i class="bi bi-cart-fill"></i> Your Cart</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./Contact.html"><i class="bi bi-envelope-at-fill"></i> Contact</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -73,7 +70,7 @@
 
 </article>
 <article class="col-md-6">
-  <h2>Our Story</h2>
+  <h2>Our Experience</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
     dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
     rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
@@ -92,7 +89,7 @@
     error, numquam autem in veniam perferendis eos nemo similique hic </p>  
 
 </article>
-<article class="col-md-12">
+<article class="col-md-12 pb-2">
   <h2 class="text-center">Our Commitment</h2>
   <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
     dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
