--- a/cart.html
+++ b/cart.html
@@ -43,23 +43,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./About.html"
-              ><i class="bi bi-file-text-fill"></i> About</a
-            >
+            <a class="nav-link" href="./About.html"><i class="bi bi-file-text-fill"></i> About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cart.html"
-              ><i class="bi bi-cart-fill"></i> Your Cart</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Contact.html"
-              ><i class="bi bi-envelope-at-fill"></i> Contact</a
-            >
+            <a class="nav-link" href="./cart.html"><i class="bi bi-cart-fill"></i> Your Cart</a>
           </li>
         </ul>
       </div>
     </nav>
+
     <header class="text-center pt-4 pb-4">
       <h1>Your Cart</h1>
     </header>
@@ -68,7 +60,7 @@
       <section class="row">
         <div class="col-md-8 checkoutContainer">
           <h2>Checkout</h2>
-          <form action="">
+          <form action="" id="checkoutForm">
             <div class="row mb-3">
               <div class="col-md-6">
                 <label for="firstName" class="form-label mt-2"
@@ -116,6 +108,7 @@
                   class="form-control"
                   id="cvv"
                   name="cvv"
+                  minlength="3"
                   placeholder="123"
                 />
               </div>
@@ -129,8 +122,8 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="expmonth"
-                  name="expmonth"
+                  id="expMonth"
+                  name="expMonth"
                   placeholder="September"
                 />
               </div>
@@ -141,8 +134,9 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="expyear"
-                  name="expyear"
+                  id="expYear"
+                  name="expYear"
+                  minlength="4"
                   placeholder="2028"
                 />
               </div>
