--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             testament to our commitment to quality, innovation, and play.
           </p>
 
-          <button class="actionButton">Learn More</button> <button class="actionButton">View Products</button>
+          <a class="actionButton" href="/About.html">Learn More</a> <a class="actionButton">View Products</a>
         </div>
       </article>
     </main>
