--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Automoblox</title>
+    <link rel="icon" type="image/png" href="./images/automoblox_logo.png">
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -82,7 +83,7 @@
             testament to our commitment to quality, innovation, and play.
           </p>
 
-          <a class="actionButton" href="/About.html">Learn More</a> <a class="actionButton">View Products</a>
+          <a class="actionButton" href="/About.html">Learn More</a> <a class="actionButton" href="/Products.html">View Products</a>
         </div>
       </article>
     </main>
