fixed white header

--- a/Products.html
+++ b/Products.html
@@ -62,7 +62,7 @@
     </nav>
     <section class="productsBanner">
       <h1>Explore Products</h1>
-      <h2>Discover Endless Possibilities</h2>
+      <h2 id="productsHeader">Discover Endless Possibilities</h2>
     </section>
     <main>
       <section class="row text-center pb-4" id="productCardsContainer">
