designed contact form, updated Scripts orgnaztion

--- a/About.html
+++ b/About.html
@@ -56,6 +56,11 @@
               ><i class="bi bi-cart-fill"></i> Your Cart</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Contact.html"
+              ><i class="bi bi-envelope-at-fill"></i> Contact Us</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
@@ -283,58 +288,7 @@
         </div>
       </section>
     </main>
-    <!-- <main class="container">
-  <section class="row">
-    <article class="col-md-6">
-      <h2>Our Story</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-        dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-        rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-        commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-        error, numquam autem in veniam perferendis eos nemo similique hic </p>  
-    
-    </article>
-<article class="col-md-6">
-  <h2>Our Mission</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-    rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-    commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-    error, numquam autem in veniam perferendis eos nemo similique hic </p>  
-
-</article>
-<article class="col-md-6">
-  <h2>Our Experience</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-    rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-    commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-    error, numquam autem in veniam perferendis eos nemo similique hic 
-    ed facilis, ad fugit corrupti ed facilis, ad fugit corrupti</p>  
-
-</article>
-</article>
-<article class="col-md-6">
-  <h2>Our Values</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-    rem dolor ex natus dolorum beatae nulla itaque eveniet incidunt
-    commodi voluptatum tempore eos qui. Sed facilis, ad fugit corrupti
-    error, numquam autem in veniam perferendis eos nemo similique hic </p>  
-
-</article>
-<article class="col-md-12 pb-2">
-  <h2 class="text-center">Our Commitment</h2>
-  <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-    rem dolor ex natus dolorum beatae nulla.orem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-    dolores, mollitia pariatur, repellat dolore quibusdam obcaecati non
-    rem dolor ex natus dolorum beatae nulla.</p>  
-</article>
-
-  </section>
-</main> -->
-
+  
     <footer class="pt-4">
       <div class="container">
         <section class="row">
@@ -421,6 +375,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js"></script>
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
