--- a/Products.html
+++ b/Products.html
@@ -57,6 +57,11 @@
               ><i class="bi bi-cart-fill"></i> Your Cart</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Contact.html"
+              ><i class="bi bi-envelope-at-fill"></i> Contact Us</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
@@ -155,6 +160,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js"></script>
+    <script src="/scripts/product.js"></script>
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
