--- a/Contact.html
+++ b/Contact.html
@@ -42,7 +42,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav p-3">
           <li class="nav-item">
             <a class="nav-link" href="./About.html"
               ><i class="bi bi-file-text-fill"></i> About</a
